cmake_minimum_required(VERSION 3.25)
project(C C)

set(CMAKE_C_STANDARD 17)

add_executable(C main.c)


add_executable(3.2 unit3/3.2.c)
add_executable(3.3 unit3/3.3.c)
add_executable(3.4 unit3/3.4.c)
add_executable(3.5 unit3/3.5.c)
add_executable(3.9 unit3/3.9.c)
add_executable(3.10 unit3/3.10.c)
add_executable(E3.1 unit3/E3.1.c)